Karl est tres tres beau dans son survet gris qui met ses parties en valeur

--- a/Exercice 2/index.html
+++ b/Exercice 2/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <div class="box">
+    <div class="box none">
         <span class="box-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eligendi provident perferendis cum maiores odit?</span>
     </div>
+    <a href="#" class="button" id="button">BOUTON</a>
 </body>
 </html>
