--- a/Exercice 4/index.html
+++ b/Exercice 4/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="container" id="container">
-        <div class="box"><span>Case 1</span></div>
-        <div class="box"><span>Case 2</span></div>
-        <div class="box"><span>Case 3</span></div>
-        <div class="box"><span>Case 4</span></div>
+        <div class="box border-black blur"><span>Case 1</span></div>
+        <div class="box border-black blur"><span>Case 2</span></div>
+        <div class="box border-black blur"><span>Case 3</span></div>
+        <div class="box border-black blur"><span>Case 4</span></div>
     </div>
 </body>
 </html>
