--- a/Exercice 2/index.html
+++ b/Exercice 2/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
-<body>
+<body class="bgwhite">
     <div class="box none">
         <span class="box-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eligendi provident perferendis cum maiores odit?</span>
     </div>
