--- a/Exercice 2/index.html
+++ b/Exercice 2/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script defer src="./script.js"></script>
 </head>
-<body class="bgwhite">
-    <div class="box none">
-        <span class="box-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eligendi provident perferendis cum maiores odit?</span>
+<body id="body">
+    <a href="#" id="button">Click here!</a>
+    <div id="box">
+        <p id="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, modi dicta? Quae, aliquam sunt blanditiis nesciunt beatae quisquam mollitia tempore facere similique eum, dignissimos quidem veritatis inventore maxime hic ducimus!</p>
     </div>
-    <a href="#" class="button" id="button">BOUTON</a>
 </body>
 </html>
