--- a/Exercice 4/index.html
+++ b/Exercice 4/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container" id="container">
-        <div class="box border-black blur"><span>Case 1</span></div>
-        <div class="box border-black blur"><span>Case 2</span></div>
-        <div class="box border-black blur"><span>Case 3</span></div>
-        <div class="box border-black blur"><span>Case 4</span></div>
+        <div class="box border-black blur"></div>
+        <div class="box border-black blur"></div>
+        <div class="box border-black blur"></div>
+        <div class="box border-black blur"></div>
     </div>
 </body>
 </html>
